--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,4 +51,8 @@ dependencies {
     implementation "com.squareup.okhttp3:logging-interceptor:3.11.0"
     implementation 'com.squareup.okio:okio:2.0.0'
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
+
+    // LiveData & ViewModel
+    implementation "android.arch.lifecycle:extensions:1.1.1"
+
 }
